* linux: enhanced generic SCSI storage support, thanks to po1vo
* linux: added process to enhance storage support testing
* fix #769: fix Virtuozzo virtualization inventory
* fix #752: normalize video cards memory on macosx
* fix #452, #642: better macosx network cards support
* fix #359: try to obtain remote management litemanager ID under win32
* Updated pci.ids to 2019.11.10 version
* Updated usb.ids to 2019.11.05 version

netdiscovery/netinventory:
* linux: avoid to share HTTP client with threads to fix RHEL/CentOS 7 crash
* Add Tagged VLAN, work at least with HPE Switch, thanks to PR-gh
* Enhanced Qlogic support to report device serial number, thanks to po1vo
* Added StormShield support via FreeBSD MIBSupport, thanks to PR-gh
* Fix memory and storage size normalization in some cases, thanks to PR-gh
* fix #738: fix time expiration when netinventory is chained with netdiscovery
  while using fusioninventory-netdiscovery script --inventory option
* fix #741: device with empty description was no more inventoried
* fix #726: Added support for latest SPARC cpus on Solaris
* fix #717: use cdpCacheSysName when available to enhance connection detection
  Try also to extract remote mac address from deviceId when possible (fix Meraki
  connection detection, even support Yealink SIP phones)
* fix #684: Added IAP Aruba serial number support
* moved APC pdu support to mibsupport, thanks to po1vo
* fix #751: Added Seagate storage support
* enhanced VLAN support
* fix #734: Fix issue with Ricoh printers
* fix #722: Enhance LinuxAppliance support with Sophos UTG support

2.5.1 Tue, 02 Jul 2019

core:
* build: fix fusioninventory-remoteinventory was not installed
* fix HTTP server plugins base configuration folder
* fix HTTP server plugins installation from Makefile
* fix HTTP server SSL plugin so SSL sessions are not closed after one second
* fix #679: Win32 service HTTP server wasn't answering during an inventory
* feature: Added Proxy and SecondaryProxy HTTP server plugins
